<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nichat.com.dummynews.MainActivity">

    <TableRow
        android:id="@+id/tr1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="200px"
                android:layout_height="150px"
                android:src="@drawable/ecnews"
                />
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/n1">
            </TextView>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:src="@drawable/movie2"
                />
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:text="@string/n2">
            </TextView>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:id="@+id/tr3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:src="@drawable/movie3"
                />
            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:text="@string/n3">
            </TextView>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:id="@+id/tr4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:src="@drawable/sports2"
                />
            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:text="@string/n4">
            </TextView>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:id="@+id/tr5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:src="@drawable/sports2"
                />
            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:text="@string/n5">
            </TextView>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:id="@+id/tr6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:src="@drawable/tech2"
                />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:text="@string/n6">
            </TextView>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:id="@+id/tr7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:src="@drawable/news2"
                />
            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:text="@string/n7">
            </TextView>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:id="@+id/tr8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="100px"
                android:layout_height="100px"
                android:src="@drawable/tech1"
                />
            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:text="@string/n8">
            </TextView>
        </LinearLayout>
    </TableRow>
</TableLayout>
